Replace ImmutableList.of with List.of