@@ -1,6 +1,5 @@
 package com.proofpoint.reporting;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.inject.Injector;
 import com.proofpoint.node.testing.TestingNodeModule;
@@ -14,10 +13,11 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.Target;
 import java.net.URI;
+import java.util.List;
 
 import static com.proofpoint.bootstrap.Bootstrap.bootstrapTest;
-import static com.proofpoint.http.client.ServiceTypes.serviceType;
 import static com.proofpoint.http.client.HttpClientBinder.httpClientBinder;
+import static com.proofpoint.http.client.ServiceTypes.serviceType;
 import static java.lang.annotation.RetentionPolicy.RUNTIME;
 
 // Put here to avoid module dependency loops
@@ -46,7 +46,7 @@ public class TestHttpClientMetrics
                 .withModules(
                         new TestingNodeModule(),
                         new TestingReportingModule(),
-                        binder -> httpClientBinder(binder).bindBalancingHttpClient("foo", serviceType("foo"), "foo", ImmutableList.of(URI.create("http://127.0.0.1")))
+                        binder -> httpClientBinder(binder).bindBalancingHttpClient("foo", serviceType("foo"), "foo", List.of(URI.create("http://127.0.0.1")))
                 )
                 .initialize();
         Assertions.assertThat(injector.getInstance(ReportingTester.class).collectData())
